--- a/index.html
+++ b/index.html
@@ -8,15 +8,11 @@
 </head>
 
 <body>
-    <div class="stopwatch"></div>
-    <nav class="controls">
-        <a href="#" class="button" id="start">Start</a>
-        <a href="#" class="button" id="stop">Stop</a>
-        <a href="#" class="button" id="reset">Reset</a>
-    </nav>
-    <ul class="results"></ul>
-
-    <script type="text/javascript" src="script-compiled.js"></script>
+    <div id="app"></div>
+    <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
+    <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
+    <script src="https://github.com/babel/babel-standalone/releases/download/release-6.26.0/babel.min.js"></script>
+    <script type="text/babel" src="script.js"></script>
 </body>
 
 </html>
